--- a/content/acronym_definition.tex
+++ b/content/acronym_definition.tex
@@ -35,11 +35,6 @@ long= Breast Ultra-Sound
   long  = Machine Learning
 }
 
-\DeclareAcronym{svm}{
-  short = SVM,
-  long  = Support Vector Machines
-}
-
 \DeclareAcronym{acm}{
   short = ACM,
   long  = Active Contour Model
@@ -172,6 +167,11 @@ long= Breast Ultra-Sound
   long = Histogram of Oriented Gradients
 }
 
+\DeclareAcronym{svm}{
+  short = SVM,
+  long = Support Vector Machines
+}
+
 \DeclareAcronym{bow}{
   short = BoW,
   long = Bag-of-Words
@@ -191,3 +191,24 @@ long= Breast Ultra-Sound
   short = AUC,
   long = Area Under the Curve
 }
+
+\DeclareAcronym{lbp}{
+  short = LBP,
+  long = Local Binary Patterns
+}
+
+\DeclareAcronym{pca}{
+  short = PCA,
+  long = Principal Component Analysis
+}
+
+\DeclareAcronym{nlm}{
+  short = NL-mean,
+  long = Non-Local Mean
+}
+
+\DeclareAcronym{lopo}{
+  short = LOPO,
+  long =  Leave-One-Patient Out
+}
+
