--- a/content/experiment/experiment.tex
+++ b/content/experiment/experiment.tex
@@ -8,6 +8,7 @@
 \subsubsection{Duke} - dataset published by Srinivasan et al. \cite{Srinivasan2014}, consists of 45 OCT volumes (15 AMD, 15 DME and 15 normal). All the SD-OCT volumes were acquired in Institutional Review Board-approved protocols using Spectralis SD-OCT (Heidelberg Engineering Ins., Heidelberg, Germany) imaging at Duke University, Harvard University and Michigan University. In this study we only consider a subset of the original data containing 15 DME and 15 normal OCT volumes.
 
 \subsection{Validation}
+For evaluation purposes, the results have been cross-validated, by splitting the data in training and testing using a \ac{lopo} strategy. In this manner for each round a pair \ac{dme}, normal has been selected to be used as the round test set, while the rest of the dataset has been used as a training. Doing the cross validation in this manner, has the limitation that despite the fact that the results are robust due to the cross validation, no results variance can be reported. However, and despite this limitation, \ac{lopo} has been choose due to the reduced amount of OCT volumes available.
 
 \subsection{Experiment}
 The SERI dataset is provided in complete SD-OCT volumes by 512$\times$1024$\times$128 dimensions. Using this dataset, first the three low-level features such as \textit{LBP}, \textit{LBP+PCA} and \textit{LBP-TOP} are extracted. The rotation invariant uniform ($riu2$) descriptors are calculated with the $P$ number of 8, 16 and 24 for the radius if 1, 2 and 3 respectively. The features are classified using RF with 100 tress. Table \ref{tab:LbPTopVolumeResult} shows the relative results for $8riu2$, $16riu2$, $24riu2$ and their combination $8riu2 + 16riu2 + 24riu2$. The results are presented in terms of sensitivity (SE) and specificity (SP) percentages.  
