--- a/content/experiment/experiment.tex
+++ b/content/experiment/experiment.tex
@@ -15,7 +15,7 @@ The SERI dataset is provided in complete SD-OCT volumes by 512$\times$1024$\time
 
 The second experiment is carried out using high-level features and BoW approach, on SERI dataset. The first high-level feature \textit{LBP+BOW} is obtained by applying BoW with 32 visual-words on the previously low-level \textit{LBP} features (applied on each B-scan). The second and third high-level descriptors are obtained using a dense approach by applying the sliding window (\textit{SW}) on each B-scan and the whole volume respectively. \textit{LBP+BoW+SW} represent the second high-level feature where the 2D-LBP features are extracted for each sliding window on each B-scan and the visual-words are selected from the pool, consisting of their histograms. The third high-level feature, \textit{LBP-TOP+BoW+SW}, is defined using LBP-TOP. By using the sliding window the 3D-LBP features are extracted for each patch. Same as previous experiment with low-level features, the descriptors are calculated with the $P$ number of 8, 16 and 24 for the radius if 1, 2 and 3 respectively. The obtained results of this experiment are illustrated in Tab. \ref{tab:SERIBoWResult}. 
 
-In order to compare our proposed framework the third experiment is carried out using the subsection of Duke dataset \citep{Srinivasan2014}. The OCT volumes provided by this dataset are of different volume size, cropped and denoised by the method of authors choice. Subsequently only the second experiment with high-level features comply with these requirements. Same as the previous experiment BoW for all the features are obtained by 32 visual-words and the 2D and 3D LBP features are extracted with $P$ number of 8, 16 and 24 for the radius if 1, 2 and 3 respectively. The obtained results for this experiment are shown in Tab. \ref{tab:DukeBoWResult}.
+In order to compare our proposed framework the third experiment is carried out using the subsection of Duke dataset \cite{Srinivasan2014}. The OCT volumes provided by this dataset are of different volume size, cropped and denoised by the method of authors choice. Subsequently only the second experiment with high-level features comply with these requirements. Same as the previous experiment BoW for all the features are obtained by 32 visual-words and the 2D and 3D LBP features are extracted with $P$ number of 8, 16 and 24 for the radius if 1, 2 and 3 respectively. The obtained results for this experiment are shown in Tab. \ref{tab:DukeBoWResult}.
 %----------
 
 %%% Local Variables: 
