Experiments with completed acroy

--- a/content/acronym_definition.tex
+++ b/content/acronym_definition.tex
@@ -216,3 +216,21 @@ long= Breast Ultra-Sound
   short = LBP-TOP,
   long =  Local Binary Pattern histogram from Three Orthogonal Planes
 }
+
+\DeclareAcronym{se}{
+  short = SE,
+  long =  Sensitivity
+Planes
+}
+
+\DeclareAcronym{sp}{
+  short = SP,
+  long =  Specificity
+Planes
+}
+
+\DeclareAcronym{sw}{
+  short = SW,
+  long =  sliding window 
+Planes
+}
