Fixing acro on results

--- a/content/results/results.tex
+++ b/content/results/results.tex
@@ -5,11 +5,11 @@
 
 
 \begin{table}
-\caption{Obtained results with Lbp, Lbp+pca and Lbp-Top features and RF with 100 trees on SERI dataset}
+\caption{Obtained results with \ac{lbp}, \ac{lbp}+\ac{pca} and \ac{lbptop} features and \ac{rf} with 100 trees on SERI dataset}
 \centering
 \begin{tabular}{lcclcclcccclcclcccclcclc}
 \toprule
-Features 	& & &\multicolumn{4}{c}{LBP}&	 & & & &\multicolumn{4}{c}{LBP+PCA}& & & & &\multicolumn{4}{c}{LBP-TOP} &\\
+Features 	& & &\multicolumn{4}{c}{\ac{lbp}}&	 & & & &\multicolumn{4}{c}{\ac{lbp}+\ac{pca}}& & & & &\multicolumn{4}{c}{\ac{lbptop}} &\\
   \cmidrule(l){2-8}  \cmidrule(l){10-16}  \cmidrule(l){18-24}
 	       & & & SE & & & SP & & & & & SE & & & SP & & & & & SE & & & SP & \\
 \midrule
@@ -25,11 +25,11 @@ Features 	& & &\multicolumn{4}{c}{LBP}&	 & & & &\multicolumn{4}{c}{LBP+PCA}& & &
 
 
 \begin{table}
-\caption{Obtained results for Lbp+BoW, LBP+BoW+SW, Lbp-Top+BoW+SW features and RF with 100 trees on SERI dataset. The BoW is computed with 32 visual words for all the experiments}
+\caption{Obtained results for \ac{lbp}+\ac{bow}, \ac{lbp}+\ac{bow}+\ac{sw}, \ac{lbptop}+\ac{bow}+\ac{sw}features and \ac{rf} with 100 trees on SERI dataset. The \ac{bow} is computed with 32 visual words for all the experiments}
 \centering
 \begin{tabular}{lcclcclcccclcclcccclcclc}
 \toprule
-Features 	& & &\multicolumn{4}{c}{LBP+BoW}&	 & & & &\multicolumn{4}{c}{LBP+BoW+SW}& & & & &\multicolumn{4}{c}{LBP-TOP+BoW} &\\
+Features 	& & &\multicolumn{4}{c}{\ac{lbp}+\ac{bow}}&	 & & & &\multicolumn{4}{c}{\ac{lbp}+\ac{bow}+\ac{sw}}& & & & &\multicolumn{4}{c}{\ac{lbptop}+\ac{bow}} &\\
   \cmidrule(l){2-8}  \cmidrule(l){10-16}  \cmidrule(l){18-24}
 	       & & & SE & & & SP & & & & & SE & & & SP & & & & & SE & & & SP & \\
 \midrule
@@ -44,11 +44,11 @@ Features 	& & &\multicolumn{4}{c}{LBP+BoW}&	 & & & &\multicolumn{4}{c}{LBP+BoW+S
 
 
 \begin{table}
-\caption{Obtained results for LBP+BoW+SW, Lbp-Top+BoW+SW features and RF with 100 trees on Duke dataset. The BoW is computed with 32 visual words for all the experiments}
+\caption{Obtained results for \ac{lbp}+\ac{bow}+\ac{sw}, \ac{lbptop}+\ac{bow}+\ac{sw} features and \ac{rf} with 100 trees on Duke dataset. The \ac{bow} is computed with 32 visual words for all the experiments}
 \centering
 \begin{tabular}{lcclcclcccclcclc}
 \toprule
-Features 	& & &\multicolumn{4}{c}{LBP+BoW+SW}&	 & & & &\multicolumn{4}{c}{LBP-TOP+BoW} &\\
+Features 	& & &\multicolumn{4}{c}{\ac{lbp}+\ac{bow}+\ac{sw}}&	 & & & &\multicolumn{4}{c}{\ac{lbptop}+\ac{bow}} &\\
   \cmidrule(l){2-8}  \cmidrule(l){10-16}  
 	       & & & SE & & & SP & & & & & SE & & & SP& \\
 \midrule
