Finished to complete the denoising section

--- a/content/literature_review.bib
+++ b/content/literature_review.bib
@@ -220,6 +220,28 @@
   year={2003}
 }
 
+@article{schmitt1999speckle,
+  title={Speckle in optical coherence tomography},
+  author={Schmitt, Joseph M and Xiang, SH and Yung, Kin M},
+  journal={Journal of biomedical optics},
+  volume={4},
+  number={1},
+  pages={95--105},
+  year={1999},
+  publisher={International Society for Optics and Photonics}
+}
+
+% 19482578 
+@Article{Coupe2009,
+   Author="Coupe, P.  and Hellier, P.  and Kervrann, C.  and Barillot, C. ",
+   Title="{{N}onlocal means-based speckle filtering for ultrasound images}",
+   Journal="IEEE Trans Image Process",
+   Year="2009",
+   Volume="18",
+   Number="10",
+   Pages="2221--2229",
+   Month="Oct"
+}
 
 @comment{jabref-meta: selector_publisher:}
 
