--- a/latex/filesystem/package.tex
+++ b/latex/filesystem/package.tex
@@ -6,8 +6,9 @@
 %  >> WARNING: some journal templates from Springer and IEETrans might not
 %              be compatible with this package forcing to use the 
 %              deprecated packages instead.
-\usepackage{subcaption}
-\usepackage{subfig}
+% \usepackage{subcaption}
+% \usepackage{subfig}
+\usepackage{subfigure}
 
 %  The following command loads a graphics package to include images 
 %  in the document. It may be necessary to specify a DVI driver option,
@@ -100,6 +101,7 @@
   group-four-digits = true,
   group-separator = {,}
 }
+\DeclareSIUnit\px{px}
 
 % Nice package with citeauthor
 %\usepackage{natbib}
